--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,15 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="gallery">Gallery</string>
-    <string name="slideshow">Slideshow</string>
-    <string name="tools">Tools</string>
     <string name="communicate">Communicate</string>
     <string name="share">Share</string>
     <string name="send">Send</string>
     <string name="android_studio">Android Studio</string>
     <string name="android_studio_android_com">android.studio@android.com</string>
+    <string name="dictionary">Sózlik</string>
+    <string name="favourites">Saylandılar</string>
+    <string name="history">Tariyx</string>
+    <string name="settings">Sazlawlar</string>
+    <string name="about">Haqqımizda</string>
+    <string name="additional">Qosımsha</string>
 </resources>
