--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="communicate">Communicate</string>
     <string name="share">Share</string>
     <string name="send">Send</string>
     <string name="android_studio">Android Studio</string>
@@ -14,6 +13,5 @@
     <string name="favourites">Saylandılar</string>
     <string name="history">Tariyx</string>
     <string name="settings">Sazlawlar</string>
-    <string name="about">Haqqımizda</string>
-    <string name="additional">Qosımsha</string>
+    <string name="about">Haqqımızda</string>
 </resources>
