--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="android_studio">Android Studio</string>
     <string name="android_studio_android_com">android.studio@android.com</string>
     <string name="dictionary">Sózlik</string>
+    <string name="translation">Awdarma</string>
     <string name="favourites">Saylandılar</string>
     <string name="history">Tariyx</string>
     <string name="settings">Sazlawlar</string>
