--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="share">Share</string>
-    <string name="send">Send</string>
     <string name="android_studio">Android Studio</string>
     <string name="android_studio_android_com">android.studio@android.com</string>
     <string name="dictionary">Sózlik</string>
@@ -15,4 +13,5 @@
     <string name="history">Tariyx</string>
     <string name="settings">Sazlawlar</string>
     <string name="about">Haqqımızda</string>
+    <string name="search_hint">izlegen sózińizdi kiritiń</string>
 </resources>
