--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="settings">Sazlawlar</string>
     <string name="about">Haqqımızda</string>
     <string name="search_hint">izlegen sózińizdi kiritiń</string>
-    <string name="translation_found">\"%1$s\" tabılmadı, bálkim tómendegilerdi izlegen shıǵarsız.</string>
-    <string name="translation_not_found">\"%1$s\" boyınsha nátiyjeler tabılmadı.</string>
+    <string name="suggestion_found">\"%1$s\" tabılmadı, bálkim tómendegilerdi izlegen shıǵarsız.</string>
+    <string name="suggestion_not_found">\"%1$s\" boyınsha nátiyjeler tabılmadı.</string>
     <string name="share_translation">Sózdi bólisiw</string>
     <string name="share">Bólisiw</string>
 </resources>
