Apply new design to translation screen and other parts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="android_studio">Android Studio</string>
     <string name="android_studio_android_com">android.studio@android.com</string>
     <string name="dictionary">Sózlik</string>
+    <string name="qaraqalpaq_dictionaries">Qaraqalpaqsha\nsózlikler</string>
     <string name="translation">Awdarma</string>
     <string name="favourites">Saylandılar</string>
     <string name="history">Tariyx</string>
