--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="android_studio">Android Studio</string>
-    <string name="android_studio_android_com">android.studio@android.com</string>
     <string name="dictionary">Sózlik</string>
-    <string name="translation">Awdarma</string>
+    <string name="qaraqalpaq_dictionaries">Qaraqalpaqsha\nsózlikler</string>
     <string name="favourites">Saylandılar</string>
     <string name="history">Tariyx</string>
     <string name="settings">Sazlawlar</string>
@@ -33,7 +31,7 @@
     <string name="pref_alphabet_default" translatable="false">@string/pref_alphabet_latin</string>
     <string name="empty_favorites_text">Saylandılar bos</string>
     <string name="empty_histories_text">Siz ele hesh bir sózdiń awdarmasın kórmedińiz</string>
-    <string name="keyboard_not_installed">Sózlerdi tolıq izlew ushın QqKeyboard baǵdarlamasın ornatıwıńızdı másláhát etemiz</string>
+    <string name="keyboard_not_installed">Sózlerdi tolıq izlew ushın <b>QqKeyboard</b> baǵdarlamasın ornatıwıńızdı másláhát etemiz</string>
     <string name="qqkeyboard_address">https://play.google.com/store/apps/details?id=com.shagalalab.qqkeyboard</string>
     <string name="qqkeyboard_package">com.shagalalab.qqkeyboard</string>
 </resources>
