men ozim basqa komptan ashiwim ushin
Ozim basqa kompta ashiw ushin

added unit test for dictionaryPresenter

Bir ko'rip berin' eki testta qate tawip tur

unit test added succesfully

all fixed as written in the comments

added translate of Qaraqalpaq sozlikleri

Rename constant

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="dictionary">Сөзлик</string>
     <string name="favourites">Сайландылар</string>
+    <string name="qaraqalpaq_dictionaries">Қарақалпақша\nсөзликлер</string>
     <string name="history">Тарийх</string>
     <string name="settings">Сазлаўлар</string>
     <string name="about">Ҳаққымызда</string>
