added cyrillic alphabet to SpellChecker
added cyrillic alphabet to Norvig Spelling Corrector

fixed lacks

awa

Refactor and fixing strings

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -7,8 +7,8 @@
     <string name="settings">Сазлаўлар</string>
     <string name="about">Ҳаққымызда</string>
     <string name="search_hint">Излеген сөзиңизди киритиң</string>
-    <string name="suggestion_found">\"%1$s\" табылмады, бәлким төмендегилерди излеген шығарсыз.</string>
-    <string name="suggestion_not_found">\"%1$s\" бойынша нәтийжелер табылмады.</string>
+    <string name="suggestion_found">\"%1$s\" сөзи табылмады, бәлким төмендегилерди излеген шығарсыз.</string>
+    <string name="suggestion_not_found">\"%1$s\" сөзи бойынша нәтийжелер табылмады.</string>
     <string name="share_translation">Сөзди бөлисиў</string>
     <string name="share">Бөлисиў</string>
     <string name="about_text">Бул бағдарлама <b>Shaǵala Lab</b> топары ҳәм оның ағзалары <a href="mailto:manasbazarbayev@gmail.com">Манас Базарбаев</a> ҳәм <a href="mailto:kalabaevshj@gmail.com">Шарапат Қалабаев</a> тәрепинен ислеп шығылды. Бағдарлама бойынша пикир яки усыныс билдириу ушын <a href="mailto:info@shagalalab.com">info@shagalalab.com</a> электрон почтасына хат жазың ямаса <a href="http://www.shagalalab.com" rel="nofollow">www.shagalalab.com</a> сайтында "байланыс" бетинде жайласқан форманы толтырың.\n\n<b>Shaǵala Lab</b> - Қарақалпақ тилиндеги бағдарламалар лабораториясы\n\nБизлердиң жумысларымыз бенен <a href="https://play.google.com/store/apps/developer?id=Shag%27ala+Lab" rel="nofollow">Google Play</a> яки <a href="http://www.shagalalab.com/" rel="nofollow">сайтымызда</a> танысыу имкәниятына ийесиз.</string>
@@ -16,4 +16,5 @@
     <string name="empty_favorites_text">Сайландылар бос</string>
     <string name="empty_histories_text">Сиз еле ҳеш бир сөздиң аўдармасын көрмедиңиз</string>
     <string name="keyboard_not_installed">Сөзлерди толық излеў ушын <b>QqKeyboard</b> бағдарламасын орнатыўыңызды мәсләҳәт етемиз</string>
+    <string name="invalid_input">Сөзди киритиўде қателик жүз берди, тек ҳәриплерден пайдаланып қайта киритип көриң</string>
 </resources>
