--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,10 @@
         yamasa <a href="http://www.shagalalab.com" rel="nofollow">www.shagalalab.com</a> saytında "Baylanıs" betinde jaylasqan formanı
         toltırıń.\n\n<b>Shaǵala Lab</b> - Qaraqalpaq tilindegi baǵdarlamalar laboratoriyası\n\nBizlerdiń jumıslarımız benen
         <a href="https://play.google.com/store/apps/developer?id=Shag%27ala+Lab" rel="nofollow">Google Play</a> yaki
-        <a href="http://www.shagalalab.com/" rel="nofollow">saytımızda</a> tanısıw imkániyatına iyesiz.\n\nBaǵdarlama 1970-jılı
-        V.D.Arakin redaktorlıǵında \"Qaraqalpaqstan\" baspasınan shıqqan \"qaraqalpaqsha-inglisshe sózlik\" kitabına tiykarlanǵan.</string>
+        <a href="http://www.shagalalab.com/" rel="nofollow">saytımızda</a> tanısıw imkániyatına iyesiz.\n\nBaǵdarlama: \n- 1970-jılı
+        V.D.Arakin redaktorlıǵında \"Qaraqalpaqstan\" baspasınan shıqqan \"qaraqalpaqsha-inglisshe sózlik\"
+        \n- 1967-jılı N.A.Baskakov redaktorlıǵında \"Sovetskaya Enciklopediya\" baspasınan shıqqan \"russha-qaraqalpaqsha sózlik\"
+        \nkitaplarına tiykarlanǵan.</string>
     <string name="pref_alphabet_label">Álipbeni saylań</string>
     <string name="empty_favorites_text">Saylandılar bos</string>
     <string name="empty_histories_text">Siz ele hesh bir sózdiń awdarmasın kórmedińiz</string>
